--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metaplex/arweave-cost": "^1.0.4",
+    "@project-serum/anchor": "^0.24.2",
+    "@solana/spl-token": "^0.2.0",
     "@solana/wallet-adapter-base": "^0.9.5",
     "@solana/wallet-adapter-react": "^0.15.4",
     "@solana/wallet-adapter-react-ui": "^0.9.6",
     "@solana/wallet-adapter-wallets": "^0.16.0",
     "@solana/web3.js": "^1.41.3",
+    "@supercharge/promise-pool": "^2.1.0",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.7",
+    "js-file-download": "^0.4.12",
+    "mime": "^3.0.0",
     "next": "12.1.6",
     "postcss": "^8.4.13",
     "react": "^18.1.0",
@@ -24,6 +30,7 @@
     "yarn": "^1.22.18"
   },
   "devDependencies": {
+    "@types/mime": "^2.0.3",
     "@types/node": "17.0.31",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
