--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-	"semi": true,
+	"semi": false,
 	"singleQuote": true,
-    "jsxSingleQuote": true
-
+    "jsxSingleQuote": true,
+	"bracketSpacing": true
 }
