Feat/remove cm account (#20)
* wallets providers + layout

* add cm functions + update form component

* config cmv2 + verify assets

* commit new changes

Co-authored-by: Begoña Álvarez de la Cruz <balvarez@boxfish.studio>

* Create Candy Machine Acc

* arweave upload

* upload cm arweave

* add prettier

* create types file and organize code

* add typing

* fetch candy machines from a wallet address

* form pre-filled

* fix merge

* update cm

* fixes

* fix form

* fix utils parse date functions

* fixes

* update authority

* default values for date and time

* -

* .

* -

* fix files location

* Feat: add spinner and error message display

* -

* Feat: add items available and redeemed

* Fix: rename cb to callback

* rename ms to millseconds

* Feat: add reactive button when submitting form

* Feat: add search bar to filter cm list

* Fix: remove consolelogs

* Feat: init verify upload branch

* add useStates to handle errors

* add custom hook for verify

* Fix: fix error messages

* Fix: change isFormUpdateValid name

* .

* add a ConnectWallet component

* Fix: rename useState and remove loop in useUploadCache

* Fix: make solscan link open in a new tab

* .

* remove space

* .

* Feat: add cache error and change any type

* Fix: change name to isLoading

* .

* Fix: first manifest must be 0.json

* Fix: run prettier

* Feat: remove cm account

* Feat: fade-in animation

* .

* .

* Fix: change colors to HSL

* Feat: fetch account prebalance and postbalance

* Feat: create custom button and use it in Form and Modal

* fix: fix

* Feat: add ActionButton to verify cm

* Fix: add connected wallet

* Fix: check wallet is connected

* Fix: check if loading or error

* .

* .

* Fix: fix

* Fix: add proper typing

* Prettier: run prettier

* Feat: add message for account with 0 cm

* Feat: change navbar elements bg color

* 

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pretty": "prettier --write  \"./**/*.{tsx,ts}\""
   },
   "dependencies": {
     "@metaplex/arweave-cost": "^1.0.4",
@@ -36,6 +37,7 @@
     "@types/react-dom": "18.0.3",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
+    "prettier": "2.6.2",
     "typescript": "4.6.4"
   }
 }
