--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,12 @@
 {
+	"arrowParens": "always",
+	"bracketSpacing": true,
+	"endOfLine": "lf",
+	"jsxSingleQuote": true,
+	"printWidth": 120,
 	"semi": false,
 	"singleQuote": true,
-    "jsxSingleQuote": true,
-	"bracketSpacing": true
+	"tabWidth": 4,
+	"trailingComma": "es5",
+	"useTabs": false
 }
