fix: bug report template (#64)

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,3 +1,9 @@
+---
+name: Found a bug?
+description: Please use this form to report a bug
+title: '[Bug report]: '
+labels: 'bug report'
+
 body:
     - type: markdown
       attributes:
