--- a/.github/workflows/deploy_prod.yaml
+++ b/.github/workflows/deploy_prod.yaml
@@ -18,4 +18,5 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
           PRODUCTION: true
-          ALIAS_DOMAINS: "${{ secrets.DOMAIN }}"
+          ALIAS_DOMAINS: |
+            cm.boxfish.studio
