--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@metaplex-foundation/js": "^0.11.7",
     "@metaplex/arweave-cost": "^1.0.4",
     "@project-serum/anchor": "^0.24.2",
     "@solana/spl-token": "^0.2.0",
@@ -28,6 +29,7 @@
     "postcss": "^8.4.13",
     "react": "^18.1.0",
     "react-dom": "18.1.0",
+    "swiper": "^8.2.4",
     "tailwindcss": "^3.0.24",
     "yarn": "^1.22.18"
   },
