--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "^8.4.13",
     "react": "^18.1.0",
     "react-dom": "18.1.0",
+    "sass": "^1.53.0",
     "swiper": "^8.2.4",
     "tailwindcss": "^3.0.24",
     "yarn": "^1.22.18"
