--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@metaplex-foundation/js": "^0.11.7",
     "@metaplex/arweave-cost": "^1.0.4",
+    "@primer/components": "^33.1.0",
+    "@primer/css": "^20.2.4",
+    "@primer/react": "^35.4.0",
     "@project-serum/anchor": "^0.24.2",
     "@solana/spl-token": "^0.2.0",
     "@solana/wallet-adapter-base": "^0.9.5",
@@ -27,9 +30,10 @@
     "mime": "^3.0.0",
     "next": "12.1.6",
     "postcss": "^8.4.13",
-    "react": "^18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.53.0",
+    "styled-components": "^5.3.5",
     "swiper": "^8.2.4",
     "tailwindcss": "^3.0.24",
     "yarn": "^1.22.18"
