feat: add seach input to candy machines top actions list (#119)
* feat: add recoil & mangifying glass svg

* feat: add search bar and top actions components

* feat: replace search input with search bar component

* feat: add .trim() to search input

* refactor: update top actions and search bar behavior

* feat: remove connected condition from top-actions

* style: add container to TopActions

* feat: set placeholder text of searchbar as prop

--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "postcss": "^8.4.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recoil": "^0.7.4",
     "sass": "^1.53.0",
     "styled-components": "^5.3.5",
-    "swiper": "^8.2.4",
     "tailwindcss": "^3.0.24",
+    "swiper": "^8.2.4",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
