--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "yarn run version && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "version": "curl https://api.github.com/repos/boxfish-studio/sugar-rush/tags > public/tag_version.txt",
+    "tag": "node git-tags.js",
     "format": "prettier --write  \"./**/*.{tsx,ts,css}\"",
     "prepare": "husky install"
   },
@@ -48,6 +48,7 @@
     "eslint-config-next": "12.1.6",
     "husky": ">=6",
     "lint-staged": ">=10",
+    "git-tags": "^0.2.4", 
     "prettier": "2.6.2",
     "typescript": "4.6.4"
   },
