--- a/.github/workflows/deploy_prod.yaml
+++ b/.github/workflows/deploy_prod.yaml
@@ -10,6 +10,25 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Get tag version
+        uses: satackey/action-js-inline@v0.0.2
+        id: getdata
+        with:
+          # Edit the following line to install packages required to run your script.
+          required-packages: git-tags
+          script: |
+            var gittags = require("git-tags");
+            var fs = require("fs");
+            gittags.get(function (err, tags) {
+              if (err) throw err;
+              const obj = {
+                version: tags[0],
+              };
+              fs.writeFileSync("version.json", JSON.stringify(obj), "utf8");
+              console.log(tags);
+            });
       - name: Deploy to Vercel Action
         uses: BetaHuhn/deploy-to-vercel-action@v1
         with:
