--- a/.github/workflows/ci-deploy-production.yaml
+++ b/.github/workflows/ci-deploy-production.yaml
@@ -36,4 +36,6 @@ jobs:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          VERCEL_SCOPE: ${{ secrets.VERCEL_SCOPE }}
+          ALIAS_DOMAINS: sugar-rush.boxfish.studio
           PRODUCTION: true
